REST controllers are missing several business endpoints,Strengthen validation consistency across layers and update documentation